--- a/medicinal_plant/android/build.gradle
+++ b/medicinal_plant/android/build.gradle
@@ -1,5 +1,7 @@
 buildscript {
-    ext.kotlin_version = '1.9.24'
+    // ext.kotlin_version = '1.9.24'
+    ext.kotlin_version = '1.9.22'
+
   repositories {
     google()
     mavenCentral()
@@ -7,6 +9,7 @@ buildscript {
 
   dependencies {
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    crosspath "com.android.tools.build.gradle:8.8"
     classpath 'com.google.gms:google-services:4.4.2' 
   }
 }
