--- a/medicinal_plant/pubspec.yaml
+++ b/medicinal_plant/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   speech_to_text: ^6.3.0
   google_sign_in: ^6.2.1
   image_picker: ^1.1.2
-  tflite: ^1.1.2
+  # tflite: ^1.1.2
   permission_handler: ^11.3.1
   camera: ^0.11.0+1
   image: ^4.2.0
