--- a/medicinal_plant/android/gradle.properties
+++ b/medicinal_plant/android/gradle.properties
@@ -4,3 +4,5 @@
 org.gradle.jvmargs=-Xmx4G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
+org.gradle.java.home=C:\\Program Files\\Java\\jdk-17
+
